Work on a rewrite, get token parsing working.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,11 @@
 		"type_traits": "c",
 		"utility": "c",
 		"cstdint": "c",
-		"vector.h": "c"
+		"vector.h": "c",
+		"string_view": "c",
+		"initializer_list": "c",
+		"malloc.h": "c",
+		"stdint.h": "c",
+		"random": "c"
 	}
 }
