--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,17 +1,12 @@
 {
-	// Use IntelliSense to learn about possible attributes.
-	// Hover to view descriptions of existing attributes.
-	// For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-	"version": "0.2.0",
 	"configurations": [
-		{
-			"name": "Debug",
-			"type": "gdb",
-			"request": "launch",
-			"target": "csqlang",
-			"cwd": "${workspaceRoot}",
-			"valuesFormatting": "parseText",
-			"arguments": "-c example.csq"
-		}
+	{
+		"name": "Launch",
+		"type": "lldb",
+		"request": "launch",
+		"program": "${workspaceFolder}\\build\\Debug\\csqlang.exe",
+		"cwd": "${workspaceFolder}\\build",
+		"args": ["-c", "..\\example.csq"],
+	}
 	]
 }
