Implement better debugging solution for the parser, still not finished implementing parser.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,7 @@
 		{
 			"type": "gdb",
 			"request": "launch",
-			"name": "Launch Program",
+			"name": "Debug",
 			"target": "./build/csqlang",
 			"cwd": "${workspaceRoot}",
 			"valuesFormatting": "parseText",
