Implement the proper appending of all objects with their type value filled out, we must now implement their actual contents' settings...

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 
-project(csqlang)
+project(csqc)
 
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_C_STANDARD_REQUIRED True)
@@ -10,4 +10,4 @@ include_directories("${CMAKE_CURRENT_SOURCE_DIR}/include")
 
 file(GLOB SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/source/*.c")
 
-add_executable(csqlang ${SOURCES})
+add_executable(csqc ${SOURCES})
