Implement the symbol table structure, haven't implemented it's actual accessing yet.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
 			"type": "gdb",
 			"request": "launch",
 			"name": "Debug",
-			"target": "./build/csqlang",
+			"target": "./build/csqc",
 			"cwd": "${workspaceRoot}",
 			"valuesFormatting": "parseText",
 			"arguments": "-c example.csq"
